the American union state is now basically done!

--- a/localisation/KR_American_Union_State_l_english.yml
+++ b/localisation/KR_American_Union_State_l_english.yml
@@ -653,18 +653,113 @@ unionstate.216.a:0 "War against the godless Syndicalists!"
 unionstate.216.b:0 "War is not needed"
 unionstate.217.t:0 "Treaty with America?"
 unionstate.217.d:0 "The United states have come with a treaty to improve relations between our two nations. Such a treaty will improve the trade relations and offer an guarantee of protection for Mexico. It would be foolish to say no to such an arrangement but others fear binding ourselves to the Americans."
-unionstate.217.a:0 "Sign the Treaty"
-unionstate.217.b:0 "Sign the Treaty"
+unionstate.217.a:0 "Let us Join the League of American States"
+unionstate.217.b:0 "Let us sign a treaty of friendship"
 unionstate.217.c:0 "Don't Sign the Treaty"
-
 unionstate.218.t:0 "Mexico Joins the League of the American States"
 unionstate.218.d:0 "The Mexicans have accepted our treaty and joined the League of American States. Further cooperation between our two countries shall bring great benefits to both countries and syndicalism shall never return to Mexico."
 unionstate.218.a:0 "Good News!"
-
 unionstate.219.t:0 "Friendly Mexican Government"
 unionstate.219.d:0 "The Mexicans have accepted our treaty. Further cooperation between our two countries shall bring great benefits to both countries and syndicalism shall never return to Mexico."
 unionstate.219.a:0 "Pleasure doing business	"
-
 unionstate.220.t:0 "Mexicans Refuse"
 unionstate.220.d:0 "The Mexicans have refused to sign a genius treaty. We should have expected such stupidity from the Mexicans."
 unionstate.220.a:0 "Stupid Mexicans"
+unionstate.221.t:0 "War in Central America"
+unionstate.221.d:0 "War has erupted in Central America between the godless syndicalists in centroamerica and the United Provinces of Central America. Many in our government are suggesting that we send both men and supplies to the United Provinces in order to stop the spread of syndicalism. "
+unionstate.221.a:0 "Guns and Men to stop Syndicalism"
+unionstate.221.b:0 "They can handle things on their own"
+unionstate.222.t:0 "Aid from the Americas"
+unionstate.222.d:0 "The Americans have sent us aid and support in order to help us stop syndicalism. More over a number of American Volunteers have arrived ready to help us fight Centroamerica!"
+unionstate.222.a:0 "Great!"
+unionstate.223.t:0 "Central American War is over"
+unionstate.223.d:0 "The Central American War is over and regardless of the outcome our men have gained experience in fighting against the godless syndicalists in Central Ameirca."
+unionstate.223.a:0 "We have learned something"
+unionstate.224.t:0 "Treaty with America?"
+unionstate.224.d:0 "The United states have come with a treaty to improve relations between our two nations. Such a treaty will improve the trade relations and offer a guarantee of protection for United Provinces. It would be foolish to say no to such an arrangement but others fear binding ourselves to the Americans. "
+unionstate.224.a:0 "Let us Join the League of American States"
+unionstate.224.b:0 "Sign the protection treaty"
+unionstate.224.c:0 "Refuse the Treaty!"
+unionstate.225.t:0 "United Provinces Joins the League of the American States"
+unionstate.225.d:0 "The United Provinces have accepted our treaty and joined the League of American States. Further cooperation between our two countries shall bring great benefits to both countries and syndicalism shall never return to United Provinces."
+unionstate.225.a:0 "Good News!"
+unionstate.226.t:0 "Friendly United Provinces"
+unionstate.226.d:0 "The United Provinces have accepted our treaty. Further cooperation between our two countries shall bring great benefits to both countries and syndicalism shall never return to United Provinces."
+unionstate.226.a:0 "Pleasure doing business	"
+unionstate.227.t:0 "United Provinces Refuse"
+unionstate.227.d:0 "The United Provinces have refused to sign a genius treaty. We should have expected such stupidity from the Central Americans."
+unionstate.227.a:0 "Stupid United Provinces"
+unionstate.228.t:0 "Treaty with America?"
+unionstate.228.d:0 "The United states have come with a treaty to improve relations between our two nations. Such a treaty will improve the trade relations and offer a guarantee of protection for Panama. It would be foolish to say no to such an arrangement but others fear binding ourselves to the Americans. "
+unionstate.228.a:0 "Let us Join the League of American States"
+unionstate.228.b:0 "Sign the protection treaty"
+unionstate.228.c:0 "Refuse the Treaty!"
+unionstate.229.t:0 "Panama Joins the League of the American States"
+unionstate.229.d:0 "Panama have accepted our treaty and joined the League of American States. Further cooperation between our two countries shall bring great benefits to both countries and syndicalism shall never return to Panama."
+unionstate.229.a:0 "Good News!"
+unionstate.230.t:0 "Friendly Panama"
+unionstate.230.d:0 "The Panamanians have accepted our treaty. Further cooperation between our two countries shall bring great benefits to both countries and syndicalism shall never return to Panama."
+unionstate.230.a:0 "Pleasure doing business	"
+unionstate.231.t:0 "Panama Refuse"
+unionstate.231.d:0 "Panamas has refused to sign a genius treaty. We should have expected such stupidity from the Panamanians"
+unionstate.231.a:0 "Stupid Panamanians"
+unionstate.232.t:0 "Treaty with America?"
+unionstate.232.d:0 "The United states have come with a treaty to improve relations between our two nations. Such a treaty will improve the trade relations and offer a guarantee of protection for Cuba. It would be foolish to say no to such an arrangement but others fear binding ourselves to the Americans. "
+unionstate.232.a:0 "Let us Join the League of American States"
+unionstate.232.b:0 "Sign the protection treaty"
+unionstate.232.c:0 "Refuse the Treaty!"
+unionstate.233.t:0 "Cuba Joins the League of the American States"
+unionstate.233.d:0 "Cuba have accepted our treaty and joined the League of American States. Further cooperation between our two countries shall bring great benefits to both countries and syndicalism shall never return to Cuba"
+unionstate.233.a:0 "Good News!"
+unionstate.234.t:0 "Friendly Cuba"
+unionstate.234.d:0 "The Cubans have accepted our treaty. Further cooperation between our two countries shall bring great benefits to both countries and syndicalism shall never return to Cuba."
+unionstate.234.a:0 "Pleasure doing business	"
+unionstate.235.t:0 "Cuba Refuse"
+unionstate.235.d:0 "Cuba have refused to sign a genius treaty. We should have expected such stupidity from the Cubans."
+unionstate.235.a:0 "Stupid Cubans"
+unionstate.236.t:0 "Treaty with America?"
+unionstate.236.d:0 "The United states have come with a treaty to improve relations between our two nations. Such a treaty will improve the trade relations and offer a guarantee of protection for Haiti. It would be foolish to say no to such an arrangement but others fear binding ourselves to the Americans. "
+unionstate.236.a:0 "Let us Join the League of American States"
+unionstate.236.b:0 "Sign the protection treaty"
+unionstate.236.c:0 "Refuse the Treaty!"
+unionstate.237.t:0 "Haiti Joins the League of the American States"
+unionstate.237.d:0 "Haiti have accepted our treaty and joined the League of American States. Further cooperation between our two countries shall bring great benefits to both countries and syndicalism shall never return to Haiti."
+unionstate.237.a:0 "Good News!"
+unionstate.238.t:0 "Friendly Haiti"
+unionstate.238.d:0 "The Haitians have accepted our treaty. Further cooperation between our two countries shall bring great benefits to both countries and syndicalism shall never return to Haiti."
+unionstate.238.a:0 "Pleasure doing business	"
+unionstate.239.t:0 "Haiti Refuse"
+unionstate.239.d:0 "Haiti have refused to sign a genius treaty. We should have expected such stupidity from the Haitians."
+unionstate.239.a:0 "Stupid Haitians"
+unionstate.240.t:0 "Treaty with America?"
+unionstate.240.d:0 "The United states have come with a treaty to improve relations between our two nations. Such a treaty will improve the trade relations and offer a guarantee of protection for Dominican Republic. It would be foolish to say no to such an arrangement but others fear binding ourselves to the Americans. "
+unionstate.240.a:0 "Let us Join the League of American States"
+unionstate.240.b:0 "Sign the protection treaty"
+unionstate.240.c:0 "Refuse the Treaty!"
+unionstate.241.t:0 "Dominican Republic Joins the League of the American States"
+unionstate.241.d:0 "The Dominican Republic have accepted our treaty and joined the League of American States. Further cooperation between our two countries shall bring great benefits to both countries and syndicalism shall never return to Dominican Republic."
+unionstate.241.a:0 "Good News!"
+unionstate.242.t:0 "Friendly Dominican Republic"
+unionstate.242.d:0 "The Dominicans have accepted our treaty. Further cooperation between our two countries shall bring great benefits to both countries and syndicalism shall never return to Dominican Republic."
+unionstate.242.a:0 "Pleasure doing business	"
+unionstate.243.t:0 "Dominican Republic Refuse"
+unionstate.243.d:0 "The Dominican Republic have refused to sign a genius treaty. We should have expected such stupidity from the Central Americans."
+unionstate.243.a:0 "Stupid Dominican Republic"
+unionstate.244.t:0 "Syndicalism in Central America"
+unionstate.244.d:0 "The United Provinces have lost and now Central America is under syndicalist control. Many in the government are advocating for a crusade against Syndicalism and stop it from spreading it further in the Americas. "
+unionstate.244.a:0 "We shall destroy Syndicalism"
+unionstate.244.b:0 "It won't spread"
+
+
+
+
+
+
+
+
+
+
+
+
+
+
