Russia now can get access to LC markets, if controls Vladivostok and Transamur doesn't exists

--- a/localisation/KR_Legation_Cities_l_english.yml
+++ b/localisation/KR_Legation_Cities_l_english.yml
@@ -315,3 +315,7 @@ legcities.40.a:0 "At least they compensated us..."
 legcities.41.t:0 "Profits from Legation cities no longer available"
 legcities.41.d:0 "Bad news. The Legation Cities have been destroyed, the profits from them are no longer available."
 legcities.41.a:0 "Terrible news indeed."
+
+legcities.42.t:0 "Profits from Legation cities"
+legcities.42.d:0 "Following the 1926 German Intervention in China and the Treaty of Nanjing signed in November of that year, foreign trade was left to the richest cities of the coast, under a joint control of world powers owning interests in China. The independence of these consortium of cities was guaranteed by the major local and international powers, such as the Qing Empire, AlgOstAsien GmbH, Japan, Australia, Canada, United States and Germany. Foreign investments and Legation Cities themselves flourish not only through foreign trade but also thanks to smuggling into AlgOstAsien and Qing territories. Though Russia didn't have the investments in the Legation Cities after the Weltkrieg, but now is a perfect time to get our part of the Chinese markets!"
+legcities.42.a:0 "M-m-money, I want my money!"
