Fixed POL Tech sharing, thanks Herkles
Added support for people without the DLC.

--- a/localisation/KR_Poland_l_english.yml
+++ b/localisation/KR_Poland_l_english.yml
@@ -52,6 +52,8 @@ POL_redistribute_wealth_idea:0 "Redistributed Wealth"
 POL_redistribute_wealth_idea_desc:0 "Redistributed Wealth"
 POL_peoples_king_idea:0 "The People's King"
 POL_peoples_king_idea_desc:0 "The People's King"
+POL_tech_sharing_idea:0 "Technology Sharing"
+POL_tech_sharing_idea_desc:0 "We are sharing our technology with our aliies, and they are sharing with us in turn."
 
 ### Foci ###
 POL_the_great_debate:0 "The Great Debate"
@@ -302,6 +304,7 @@ POL_radek_policy_desc:0 "With a new government comes new economic policy. All na
 
 ### Opinion Modifiers ###
 POL_NATIONALISTS_GOV:0 "Nationalist government in Poland"
+POL_INTERNATIONAL_COMMUNITY:0 "Rejoined the International Community"
 POL_WE_AUS:0 "Elected J.K.W. Fryderyk Krystian Saski"
 POL_WE_GER:0 "Elected J.K.W. Fryderyk Krystian Saski"
 POL_CZA_AUS:0 "Elected J.K.W. Augustyn I Czartoryski"
@@ -1127,3 +1130,4 @@ pol_syndicalists_overthrow_monarchy:0 "§RThe Syndicalists seize control!§! \n"
 
 ### Research ###
 german_research_name:0 "Kaiser Wilhelm Society"
+CAN_isac_created:0 "The ISAC has been created"
