Balancing POL focus tree
Some paths are no longer useless

+Added descriptions for all POL ideas.

--- a/localisation/KR_Poland_l_english.yml
+++ b/localisation/KR_Poland_l_english.yml
@@ -19,41 +19,45 @@ POL_eternal_regency_desc:0 "Poland's Regency council, initially created to decid
 POL_german_advisors:0 "German Advisers"
 POL_german_advisors_desc:0 "Reforming our military and political structure is of the utmost importance if we are to remain politically relevant in Europe. By taking advantage of our close ties with Germany, we can allow them to send us advisers to modernise our armed forces."
 POL_mathematics_schools:0 "Mathematics Schools"
-POL_mathematics_schools_desc:0 "Mathematics Schools"
+POL_mathematics_schools_desc:0 "Funding these schools gives us great benefits in the fields of research and development."
 POL_winged_hussars_idea:0 "Spirit of the Winged Hussars"
-POL_winged_hussars_idea_desc:0 "Spirit of the Winged Hussars"
+POL_winged_hussars_idea_desc:0 "The Winged Hussars live on in the modern Polish military."
 POL_offensive_force_idea:0 "An Offensive Force"
 POL_offensive_force_idea_desc:0 "Poland finds herself surrounded on all sides by nations that have no love for her. But it is not enough to merely sit back and watch as our enemies plan around us. It is we who must make the first strike, and destroy our enemies before they can destroy us."
 POL_defensive_tactics_idea:0 "Defensive Tactics"
 POL_defensive_tactics_idea_desc:0 "Poland finds herself surrounded on all sides by nations that have no love for her. If we are to survive, we must make it so that the enemy pays for every inch of ground they take with blood, and that our armies stand ready to defend every inch of Polish soil."
 POL_assembly_lines_idea:0 "Contemporary Assembly Lines"
-POL_assembly_lines_idea_desc:0 "Contemporary Assembly Lines"
+POL_assembly_lines_idea_desc:0 "Assembly lines increase our factory efficiency."
 POL_air_radios_idea:0 "Personal Pilot Radios"
-POL_air_radios_idea_desc:0 "Personal Pilot Radios"
+POL_air_radios_idea_desc:0 "Allowing our pilots to communicate with one another improves their ability to perform complex maneuvers."
 POL_euro_block_idea:0 "The European Economic Bloc"
-POL_euro_block_idea_desc:0 "The European Economic Bloc"
+POL_euro_block_idea_desc:0 "Joining Germany's economic bloc serves to strengthen the Polish economy."
 POL_an_absolute_monarch_idea:0 "An Absolute Monarch"
-POL_an_absolute_monarch_idea_desc:0 "An Absolute Monarch"
+POL_an_absolute_monarch_idea_desc:0 "All authority rests in the hands of the monarch."
 POL_centralized_state_idea:0 "A Centralised State"
-POL_centralized_state_idea_desc:0 "A Centralised State"
+POL_centralized_state_idea_desc:0 "The nobles have been undercut at every turn, hurtign theri  ability to influence the government."
 POL_a_new_sejm_idea:0 "A New Sejm"
-POL_a_new_sejm_idea_desc:0 "A New Sejm"
+POL_a_new_sejm_idea_desc:0 "Ther reformed Sejm is more capable of reacting to new threats and making important decisions."
 POL_trade_reform_idea:0 "International Trade Reform"
-POL_trade_reform_idea_desc:0 "International Trade Reform"
+POL_trade_reform_idea_desc:0 "Reforming our trade policy will keep us competitive in foregin markets."
 POL_poland_forever_idea:0 "Poland Forever"
-POL_poland_forever_idea_desc:0 "Poland Forever"
+POL_poland_forever_idea_desc:0 "Even if the Polish state is lost, her people will never surrender."
 POL_spread_revolution_idea:0 "Spreading the Revolution"
-POL_spread_revolution_idea_desc:0 "Spreading the Revolution"
+POL_spread_revolution_idea_desc:0 "The revolution must not be stopped by borders, but spread far and wide."
 POL_public_security_idea:0 "The Ministry of Public Security"
-POL_public_security_idea_desc:0 "The Ministry of Public Security"
+POL_public_security_idea_desc:0 "The Ministry serves to protect Poland from threats both domestic and foreign."
 POL_exceptionalism_idea:0 "Polish Exceptionalism"
-POL_exceptionalism_idea_desc:0 "Polish Exceptionalism"
+POL_exceptionalism_idea_desc:0 "The Polish people have been told they are exceptionable among all others, and will fight harder to prove it."
 POL_redistribute_wealth_idea:0 "Redistributed Wealth"
-POL_redistribute_wealth_idea_desc:0 "Redistributed Wealth"
+POL_redistribute_wealth_idea_desc:0 "Wealth taken from the bourgeois redistributed to the people, for the good of all."
 POL_peoples_king_idea:0 "The People's King"
-POL_peoples_king_idea_desc:0 "The People's King"
+POL_peoples_king_idea_desc:0 "Augustyn I Czartoryski inspires to Polish people to fight and defend their homes."
 POL_tech_sharing_idea:0 "Technology Sharing"
 POL_tech_sharing_idea_desc:0 "We are sharing our technology with our aliies, and they are sharing with us in turn."
+POL_lessons_of_the_empire_idea:0 "Lessons of the Empire"
+POL_lessons_of_the_empire_idea_desc:0 "Taking from Austria's experience managing many minorities, we have taken steps to integrate our own minority peoples."
+POL_citizens_rights_idea:0 "Citizen's Rights"
+POL_citizens_rights_idea_desc:0 "By empowering our citizens, we allow more to try more enlightening pursuits, such as joining the army."
 
 ### Foci ###
 POL_the_great_debate:0 "The Great Debate"
@@ -395,10 +399,13 @@ poland.7.t:0 "Chaos in the Countryside"
 poland.7.d:0 "After the collapse of the government in Poland, various factions have risen up and are vying for control of the country. Both the Syndicalist party and the Nationalist circles are strong enough to take over the Polish cities and countryside. With the remaining authorities sceptical of their own ability to retain what power they have left, most have given up and...."
 poland.7.a:0 "The Syndicalists take over!"
 poland.7.b:0 "The Nationalists take over!"
-poland.8.t:0 "Constitution"
-poland.8.d:0 "After the Regency Council promised sweeping reforms, we now have to think about what the reforms should actually entail."
-poland.8.a:0 "Long live the Republic!"
+poland.8.t:0 "A New Constitution"
+poland.8.d:0 "After the new King, [POL.GetLeader], promised sweeping reforms, we now have to think about what the reforms should actually entail."
+poland.8.a:0 "Focus on Economic Growth"
 poland.8.b:0 "The Regency Council must elect a king! Now!"
+poland.8.c:0 "Focus on Empowering the Military"
+poland.8.e:0 "Focus on Expanding Royal Power"
+poland.8.f:0 "Focus on National Unity"
 poland.9.t:0 "Another attempt at a King of Poland"
 poland.9.d:0 "Just after the Weltkrieg, the Regency Council made an attempt to elect a king of Poland. This attempt, however, was stalled by the Polish inability to firmly support a single candidate and by the Central Powers' apparent lack of interest. Now, with the 20th anniversary of Kingdom of Poland's proclamation approaching, the Regency Council wants to make one last attempt."
 poland.9.a:0 "Let us try again"
