Added new POL weapons manufacturer "Perkun" so there's actually a choice between 2 options.

--- a/localisation/KR_Companies_l_english.yml
+++ b/localisation/KR_Companies_l_english.yml
@@ -476,6 +476,7 @@ taskizak_tersanesi:0 "Taşkızak Tersanesi"
 cop:0 "COP"
 ava:0 "AVA"
 fb_radom:0 "FB Radom"
+perkun:0 "Perkun"
 zaklady_przemyslowe:0 "Zakłady Przemysłowe „1-go Maja”"
 cws:0 "CWS"
 pzinz:0 "PZinz"
