--- a/localisation/KR_Poland_l_english.yml
+++ b/localisation/KR_Poland_l_english.yml
@@ -159,7 +159,7 @@ POL_military_ideals:0 "An Offensive Fighting Force"
 POL_modern_military_thought:0 "Modern Military Thought"
 POL_military_desgin_bureaus:0 "Polish Military Design Bureau"
 POL_modern_cavalry:0 "New Age Cavalry"
-POL_winged_hussars:0 "Winged Hussars"
+POL_winged_hussars:0 "The New Winged Hussars"
 POL_a_modern_panzer:0 "Flesh to Steel"
 POL_air_superiority:0 "Combat Air Superiority"
 POL_close_combat:0 "From Biplane to Fighter"
@@ -260,7 +260,7 @@ POL_military_ideals_desc:0 "Poland finds herself surrounded on all sides by nati
 POL_modern_military_thought_desc:0 "No longer are wars fought in trenches and from strong fortifications. Modern military thought relies on swift maneuvoring and quick reactions. Our military staff must study these techniques in order to remain competitive on the world stage."
 POL_military_desgin_bureaus_desc:0 "We must establish an official Polish Military Design Bureau to consolidate the many different research divisions in our military."
 POL_modern_cavalry_desc:0 "The age of horses is over, but the age of Motorized infantry has begun. We must invest in trucks and other motorized equipment to prepare for the next war."
-POL_winged_hussars_desc:0 "Even many years after the last Winged hussar rode into battle, the spirit of the Winged Hussars remain with us, empowering our cavalry and emboldening our spirits."
+POL_winged_hussars_desc:0 "Even many years after the last Winged Hussar rode into battle, the spirit of the Winged Hussars remain with us, empowering our cavalry and emboldening our spirits."
 POL_a_modern_panzer_desc:0 "Steel is the future, and Panzers are the embodiment of this future. We must create our own designs and set them loose on the battlefield to strike down our enemies."
 POL_air_superiority_desc:0 "Our air force exists to support our soldiers on the ground, and we must improve our support tactics to reflect this priority."
 POL_close_combat_desc:0 "Biplanes are not the air force of the future. If Poland's fighters are to remain anything but target practice the nation must modernise our deisgns in time for the next war."
