Changed the name of the Irish national populist party

--- a/localisation/KR_Ireland_l_english.yml
+++ b/localisation/KR_Ireland_l_english.yml
@@ -9,8 +9,8 @@ IRE_social_conservative_party:0 "NCP"
 IRE_social_conservative_party_long:0 "National Centre Party"
 IRE_authoritarian_democrat_party:0 "FG"
 IRE_authoritarian_democrat_party_long:0 "Fine Gael"
-IRE_national_populist_party:0 "CÉ"
-IRE_national_populist_party_long:0 "Clann Éireann"
+IRE_national_populist_party:0 "ICF"
+IRE_national_populist_party_long:0 "Irish Christian Front"
 IRE_social_liberal_party:0 "FF"
 IRE_social_liberal_party_long:0 "Fianna Fáil"
 IRE_paternal_autocrat_party:0 "ANH"
